...
            focusedLabelColor = AppColors.primary,
            unfocusedLabelColor = AppColors.grey,
            errorLabelColor = AppColors.error
        ),
        modifier = Modifier
            .fillMaxWidth()
            .testTag("textFieldNormal")
            .padding(vertical = 8.dp),
        shape = RoundedCornerShape(12.dp)
    )
}

//Field Para contraseña
...
            focusedLabelColor = AppColors.primary,
            unfocusedLabelColor = AppColors.grey,
            errorLabelColor = AppColors.error
        ),
        modifier = Modifier
            .fillMaxWidth()
            .testTag("textFieldContrasenia")
            .padding(vertical = 8.dp),
        shape = RoundedCornerShape(12.dp)
    )
}

