...
                precioMaxFiltro = precioMaxFiltro,
                addPrecioMax = { precioMaxFiltro = it.toDoubleOrNull() },
                categoriaFiltro = categoriaFiltro,
                categoriasDisponibles = categoriasDisponibles,
                onSelectedCategoria = { categoriaFiltro = it }
            )
            Box(modifier = Modifier.fillMaxSize().testTag("libroListaScreen")) {
                if (isLoading || allLibros.isEmpty()) {
                    CircularProgressIndicator(
                        modifier = Modifier.align(Alignment.Center).testTag("loadingIndicator"),
                        color = AppColors.primary
                    )
                }
                else if(filteredLibros.isEmpty() && (tipoStockFiltro != null || categoriaFiltro != null || precioMaxFiltro != null || precioMinFiltro != null)){
                    Text(
                        text = "No se encontraron resultados",
...
