...
                                text = "Inicia sesión para disfrutar de recomendaciones personalizadas y más.",
                                style = MaterialTheme.typography.body2,
                                color = AppColors.white
                            )
                            Spacer(modifier = Modifier.height(12.dp))
                            Button(
                                modifier = Modifier.testTag("botonScreenInicio"),
                                onClick = { navController.navigateTo(AppRoutes.Login) },
                                colors = ButtonDefaults.buttonColors(
                                    backgroundColor = AppColors.warning
                                )
                            ) {
                                Text("Iniciar Sesión", color = AppColors.primary)
...
